--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@ Pre-work for a Front End Developer position at Halo Media LLC.
   <meta charset="urf-8">
 
   <title>2 CHAINZ</title>
-	<!-- CSS files -->
-	<link rel="stylesheet" type="text/css" href="./css/reset.css">
-	<link rel="stylesheet" type="text/css" href="./css/mobile.css">
-	<link rel="stylesheet" type="text/css" href="./css/tablet.css">
-	<link rel="stylesheet" type="text/css" href="./css/desktop.css">
+	<!-- Compiled CSS file -->
+	<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
@@ -30,15 +27,15 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 	</nav>
 	<!-- Artist name -->
 	<h1>2 Chainz</h1>
-	<!-- Social media -->
 	<div>
+	  <!-- Social media -->
 	  <a href="#"><img alt="Instagram" src="./assets/image-1.png"></a>
 	  <a href="#"><img alt="Spotify" src="./assets/image-2.png"></a>
 	  <a href="#"><img alt="Twitter" src="./assets/image-3.png"></a>
 	  <a href="#"><img alt="YouTube" src="./assets/image-4.png"></a>
 	  <a href="#"><img alt="Soundcloud" src="./assets/image-5.png"></a>
 	  <a href="#"><img alt="E-mail" src="./assets/image-6.png"></a>
-	<!-- Login -->
+	  <!-- Login -->
 	  <a href="#">
 		<img alt="Login" src="./assets/image-7.png">
 		<span>Login</span>
@@ -46,5 +43,9 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 	</div>
   </header>
 
+  <!-- Hero -->
+  <section>
+	<h2>Pretty Girls Like Trap Music</h2>
+  </section>
 </body>
 </html>
