--- a/index.html
+++ b/index.html
@@ -19,26 +19,25 @@ Pre-work for a Front End Developer position at Halo Media LLC.
   <header>
 	<!-- Navigation -->
 	<nav>
-	  <a href="#">News</a>
-	  <a href="#">Music</a>
-	  <a href="#">Video</a>
-	  <a href="#">Photos</a>
-	  <a href="#">Store</a>
+	  <a class="nav-link" href="#">News</a>
+	  <a class="nav-link" href="#">Music</a>
+	  <a class="nav-link" href="#">Video</a>
+	  <a class="nav-link" href="#">Photos</a>
+	  <a class="nav-link" href="#">Store</a>
 	</nav>
 	<!-- Artist name -->
 	<h1>2 Chainz</h1>
-	<div>
+	<div id="social-media">
 	  <!-- Social media -->
-	  <a href="#"><img alt="Instagram" src="./assets/image-1.png"></a>
-	  <a href="#"><img alt="Spotify" src="./assets/image-2.png"></a>
-	  <a href="#"><img alt="Twitter" src="./assets/image-3.png"></a>
-	  <a href="#"><img alt="YouTube" src="./assets/image-4.png"></a>
-	  <a href="#"><img alt="Soundcloud" src="./assets/image-5.png"></a>
-	  <a href="#"><img alt="E-mail" src="./assets/image-6.png"></a>
+	  <a href="#"><img class="social" alt="Instagram" src="./assets/image-1.png"></a>
+	  <a href="#"><img class="social" alt="Spotify" src="./assets/image-2.png"></a>
+	  <a href="#"><img class="social" alt="Twitter" src="./assets/image-3.png"></a>
+	  <a href="#"><img class="social" alt="YouTube" src="./assets/image-4.png"></a>
+	  <a href="#"><img class="social" alt="Soundcloud" src="./assets/image-5.png"></a>
+	  <a href="#"><img class="social" alt="E-mail" src="./assets/image-6.png"></a>
 	  <!-- Login -->
 	  <a href="#">
-		<img alt="Login" src="./assets/image-7.png">
-		<span>Login</span>
+		<img alt="Login" src="./assets/image-7.png"><span>Login</span>
 	  </a>
 	</div>
   </header>
