Adding hero and some style to nav bar.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 </head>
 <body>
 
-  <header>
+<header>
 	<!-- Navigation -->
 	<nav>
 	  <a class="nav-link" href="#">News</a>
@@ -27,7 +27,7 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 	</nav>
 	<!-- Artist name -->
 	<h1>2 Chainz</h1>
-	<div id="social-media">
+	<div class="container-social">
 	  <!-- Social media -->
 	  <a href="#"><img class="social" alt="Instagram" src="./assets/image-1.png"></a>
 	  <a href="#"><img class="social" alt="Spotify" src="./assets/image-2.png"></a>
@@ -37,14 +37,17 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 	  <a href="#"><img class="social" alt="E-mail" src="./assets/image-6.png"></a>
 	  <!-- Login -->
 	  <a href="#">
-		<img alt="Login" src="./assets/image-7.png"><span>Login</span>
+		  <img alt="Login" src="./assets/image-7.png"><span>Login</span>
 	  </a>
 	</div>
-  </header>
+</header>
 
-  <!-- Hero -->
-  <section>
-	<h2>Pretty Girls Like Trap Music</h2>
-  </section>
+<section class="container-hero">
+		<!-- Hero image -->
+		<img class="hero-image" alt="2 Chainz" src="./assets/image-8.jpg">
+		<!-- Title -->
+		<h2>Pretty Girls Like Trap Music</h2>
+</section>
+
 </body>
 </html>
