Adding font from Google Fonts and Font Awesome.

--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 
   <title>2 CHAINZ</title>
 	<!-- Compiled CSS file -->
-	<link rel="stylesheet" href="./css/styles.css">
+	<link href="./css/styles.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 <body>
 
 <header>
 	<!-- Navigation -->
 	<nav>
-	  <a class="nav-link" href="#">News</a>
-	  <a class="nav-link" href="#">Music</a>
-	  <a class="nav-link" href="#">Video</a>
-	  <a class="nav-link" href="#">Photos</a>
-	  <a class="nav-link" href="#">Store</a>
+	  <a href="#">News</a>
+	  <a href="#">Music</a>
+	  <a href="#">Video</a>
+	  <a href="#">Photos</a>
+	  <a href="#">Store</a>
 	</nav>
 	<!-- Artist name -->
 	<h1>2 Chainz</h1>
