--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 	</nav>
 	<!-- Artist name -->
 	<h1>2 Chainz</h1>
-	<div class="container-social">
+	<div id="social">
 	  <!-- Social media -->
-	  <a href="#"><img class="social" alt="Instagram" src="./assets/image-1.png"></a>
-	  <a href="#"><img class="social" alt="Spotify" src="./assets/image-2.png"></a>
-	  <a href="#"><img class="social" alt="Twitter" src="./assets/image-3.png"></a>
-	  <a href="#"><img class="social" alt="YouTube" src="./assets/image-4.png"></a>
-	  <a href="#"><img class="social" alt="Soundcloud" src="./assets/image-5.png"></a>
-	  <a href="#"><img class="social" alt="E-mail" src="./assets/image-6.png"></a>
+	  <a href="#"><img class="social-media" alt="Instagram" src="./assets/image-1.png"></a>
+	  <a href="#"><img class="social-media" alt="Spotify" src="./assets/image-2.png"></a>
+	  <a href="#"><img class="social-media" alt="Twitter" src="./assets/image-3.png"></a>
+	  <a href="#"><img class="social-media" alt="YouTube" src="./assets/image-4.png"></a>
+	  <a href="#"><img class="social-media" alt="Soundcloud" src="./assets/image-5.png"></a>
+	  <a href="#"><img class="social-media" alt="E-mail" src="./assets/image-6.png"></a>
 	  <!-- Login -->
 	  <a href="#">
 		  <img alt="Login" src="./assets/image-7.png"><span>Login</span>
@@ -44,11 +44,17 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 	</div>
 </header>
 
-<section class="container-hero">
-		<!-- Hero image -->
-		<img class="hero-image" alt="2 Chainz" src="./assets/image-8.jpg">
+<section id="slideshow">
+		<!-- Slideshow -->
+		<img class="main-image" alt="2 Chainz" src="./assets/image-8.jpg">
 		<!-- Title -->
 		<h2>Pretty Girls Like Trap Music</h2>
+		<!-- 
+			TO DO: 
+			On click, add a smooth scroll animation 
+			that scrolls the user to New Album section. 
+		-->
+		<button>Listen Now</button>
 </section>
 
 </body>
