Adding part of New Album

--- a/index.html
+++ b/index.html
@@ -45,16 +45,24 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 </header>
 
 <section id="slideshow">
-		<!-- Slideshow -->
-		<img class="main-image" alt="2 Chainz" src="./assets/image-8.jpg">
-		<!-- Title -->
-		<h2>Pretty Girls Like Trap Music</h2>
-		<!-- 
-			TO DO: 
-			On click, add a smooth scroll animation 
-			that scrolls the user to New Album section. 
-		-->
-		<button>Listen Now</button>
+	<!-- Slideshow -->
+	<img class="slideshow-image" alt="2 Chainz" src="./assets/image-8.jpg">
+	<!-- Title -->
+	<h2>Pretty Girls Like Trap Music</h2>
+	<!-- 
+		TO DO: 
+		On click, add a smooth scroll animation 
+		that scrolls the user to New Album section. 
+	-->
+	<input class="listen-now" type="button" value="Listen Now">
+</section>
+
+<section id="new-album">
+	<!-- Title -->
+	<h3>New Album</h3>
+	<h4>Pretty Girls Like Trap Music</h4>
+	<!-- Image -->
+	<img class="new-album-image" alt="2 Chainz" src="./assets/image-9.jpg">
 </section>
 
 </body>
