Adding buttons and style to them.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 	<h4>Pretty Girls Like Trap Music</h4>
 	<!-- Image -->
 	<img class="new-album-image" alt="2 Chainz" src="./assets/image-9.jpg">
+	<!-- Buttons -->
+	<div class="move-buttons">
+		<input class="media-buttons" type="button" value="Spotify">
+		<input class="media-buttons" type="button" value="iTunes">
+		<input class="media-buttons" type="button" value="Google Play">
+		<input class="media-buttons" type="button" value="Amazon Music">
+	</div>
 </section>
 
 </body>
