--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 
 <header>
 	<!-- Navigation -->
-	<nav>
+	<nav class="clearfix">
 	  <a href="#">News</a>
 	  <a href="#">Music</a>
 	  <a href="#">Video</a>
@@ -70,6 +70,23 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 		<input class="media-buttons" type="button" value="Google Play">
 		<input class="media-buttons" type="button" value="Amazon Music">
 	</div>
+		<!-- Tracks -->
+		<ol class="number flex">
+			<span class="flex-1">
+				<li>Good Drank - 2 Chainz, Gucci Mane, Quavo</li>
+				<li>Champions - Kayne West, Gucci Mabne, Big Sean</li>
+				<li>Watch Out - 2 Chainz</li>
+				<li>It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz</li>
+				<li>Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo</li>
+			</span>
+			<span class="flex-1">
+				<li>We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa</li>
+				<li>Big Amount - 2 Chainz</li>
+				<li>Smartphone - 2 Chainz</li>
+				<li>El Chapo Jr - 2 Chainz</li>
+				<li>I'm Diferent - 2 Chainz</li>
+			</span>
+		</ol>
 </section>
 
 </body>
