Improvements in nav bar.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 
   <header>
 	<section id="menu">
+	  <!-- 
+	  TO DO: 
+	  If I have time, add functionality to the hamburger button.
+	  -->
+	  <i class="fa fa-bars hamburger-menu" aria-hidden="true"></i>
 		<!-- Navigation -->
 		<nav class="clearfix">
-		<a class="active" href="#">News</a>
-		<a href="#">Music</a>
-		<a href="#">Video</a>
-		<a href="#">Photos</a>
-		<a href="#">Store</a>
+		  <a class="active" href="#">News</a>
+		  <a href="#">Music</a>
+		  <a href="#">Video</a>
+		  <a href="#">Photos</a>
+		  <a href="#">Store</a>
 		</nav>
 		<!-- Artist name -->
 		<h1>2 Chainz</h1>
@@ -36,11 +41,11 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 		<a href="#"><img class="social-media" alt="Spotify" src="./assets/image-2.png"></a>
 		<a href="#"><img class="social-media" alt="Twitter" src="./assets/image-3.png"></a>
 		<a href="#"><img class="social-media" alt="YouTube" src="./assets/image-4.png"></a>
-		<a href="#"><img class="social-media" alt="Soundcloud" src="./assets/image-5.png"></a>
+		<a href="#"><img class="social-media" alt="SoundCloud" src="./assets/image-5.png"></a>
 		<a href="#"><img class="social-media" alt="E-mail" src="./assets/image-6.png"></a>
 		<!-- Login -->
 		<a href="#">
-			<img alt="Login" src="./assets/image-7.png"><span>Login</span>
+			<img alt="Login" src="./assets/image-7.png"><span> Login</span>
 		</a>
 		</div>
 	</section>
