Improving navigation bar.

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 		<a href="#"><img class="social-media" alt="SoundCloud" src="./assets/image-5.png"></a>
 		<a href="#"><img class="social-media" alt="E-mail" src="./assets/image-6.png"></a>
 		<!-- Login -->
-		<a href="#">
-			<img alt="Login" src="./assets/image-7.png"><span> Login</span>
-		</a>
+		<a href="#"><img alt="Login" src="./assets/image-7.png"> Login</a>
 		</div>
 	</section>
 
