Adding comments to the code.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--
 Candidate: Francheska Guzman
-Pre-work for a Front End Developer position at Halo Media LLC.
+Deadline: January 31, 2018 at 10:00am
+Description: Pre-work for the Front End Developer position at Halo Media LLC.
 -->
 
 <!DOCTYPE html>
@@ -46,7 +47,7 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 		  <!-- Login -->
 		  <a href="#"><img alt="Login" src="./assets/image-7.png"> Login</a>
 		</div>
-	</section>
+	</section><!-- End of menu section -->
 
 	<section id="slideshow">
 	    <!-- Slideshow -->
@@ -59,7 +60,7 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 		that scrolls the user to New Album section. 
 		-->
 		<input type="button" value="Listen Now">
-	</section>
+	</section><!-- End of slideshow section -->
   </header>
 
   <section id="new-album">
@@ -92,7 +93,7 @@ Pre-work for a Front End Developer position at Halo Media LLC.
 				<li>I'm Diferent - 2 Chainz</li>
 			</span>
 		</ol>
-  </section>
+  </section><!-- End of new album section -->
 
 </body>
 </html>
