Moving files to a Foundation project.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,22 +4,7 @@ Deadline: January 31, 2018 at 10:00am
 Description: Pre-work for the Front End Developer position at Halo Media LLC.
 -->
 
-<!DOCTYPE html>
-<html land="en">
-<head>
-  <meta name="viewport" 
-	content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta charset="urf-8">
-
-  <title>2 CHAINZ</title>
-	<!-- Compiled CSS file -->
-	<link href="./css/styles.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-</head>
-<body>
-
-  <header>
+<header>
 	<section id="menu">
 	  <!-- 
 	  TO DO: 
@@ -38,20 +23,20 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
 		<h1>2 Chainz</h1>
 		<div id="social">
 		  <!-- Social media -->
-		  <a href="#"><img class="social-media" alt="Instagram" src="./assets/image-1.png"></a>
-		  <a href="#"><img class="social-media" alt="Spotify" src="./assets/image-2.png"></a>
-		  <a href="#"><img class="social-media" alt="Twitter" src="./assets/image-3.png"></a>
-		  <a href="#"><img class="social-media" alt="YouTube" src="./assets/image-4.png"></a>
-		  <a href="#"><img class="social-media" alt="SoundCloud" src="./assets/image-5.png"></a>
-		  <a href="#"><img class="social-media" alt="E-mail" src="./assets/image-6.png"></a>
+		  <a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
+		  <a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
+		  <a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
+		  <a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
+		  <a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
+		  <a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
 		  <!-- Login -->
-		  <a href="#"><img alt="Login" src="./assets/image-7.png"> Login</a>
+		  <a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login</a>
 		</div>
 	</section><!-- End of menu section -->
 
 	<section id="slideshow">
 	    <!-- Slideshow -->
-	    <img class="slideshow-image" alt="2 Chainz" src="./assets/image-8.jpg">
+	    <img class="slideshow-image" alt="2 Chainz" src="../assets/img/image-8.jpg">
 		<!-- Title -->
 		<h2>Pretty Girls Like Trap Music</h2>
 		<!-- 
@@ -61,14 +46,14 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
 		-->
 		<input type="button" value="Listen Now">
 	</section><!-- End of slideshow section -->
-  </header>
+</header>
 
-  <section id="new-album">
+<section id="new-album">
 	<!-- Title -->
 	<h3>New Album</h3>
 	<h4>Pretty Girls Like Trap Music</h4>
 	<!-- Image -->
-	<img class="new-album-image" alt="2 Chainz" src="./assets/image-9.jpg">
+	<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-9.jpg">
 	<!-- Buttons -->
 	<div class="move-buttons">
 		<input class="button" type="button" value="Spotify">
@@ -93,7 +78,4 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
 				<li>I'm Diferent - 2 Chainz</li>
 			</span>
 		</ol>
-  </section><!-- End of new album section -->
-
-</body>
-</html>
+</section><!-- End of new album section -->
