Changing nav bar using Foundation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,23 +5,26 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
 -->
 
 <header>
-	<section id="menu">
-	  <!-- 
-	  TO DO: 
-	  If I have time, add functionality to the hamburger button.
-	  -->
-	  <i class="fa fa-bars hamburger-menu" aria-hidden="true"></i>
+	<section id="menu" class="large-12 column">
+	  <div class="row">
 		<!-- Navigation -->
-		<nav class="clearfix">
+		<nav class="clearfix large-4">
 		  <a class="active" href="#">News</a>
 		  <a href="#">Music</a>
 		  <a href="#">Video</a>
 		  <a href="#">Photos</a>
 		  <a href="#">Store</a>
 		</nav>
-		<!-- Artist name -->
-		<h1>2 Chainz</h1>
-		<div id="social">
+		<div class="small-12 large-4">
+			<!-- 
+			TO DO: 
+			If I have time, add functionality to the hamburger button.
+			-->
+			<i class="fa fa-bars hamburger-menu"></i>
+			<!-- Artist name -->
+			<h1>2 Chainz</h1>
+		</div>
+		<div id="social" class="large-4">
 		  <!-- Social media -->
 		  <a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
 		  <a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
@@ -32,6 +35,7 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
 		  <!-- Login -->
 		  <a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login</a>
 		</div>
+	  </div>
 	</section><!-- End of menu section -->
 
 	<section id="slideshow">
@@ -62,15 +66,15 @@ Description: Pre-work for the Front End Developer position at Halo Media LLC.
 		<input class="button" type="button" value="Amazon Music">
 	</div>
 		<!-- Tracks -->
-		<ol class="number flex">
-			<span class="flex-1">
+		<ol class="number">
+			<span>
 				<li>Good Drank - 2 Chainz, Gucci Mane, Quavo</li>
 				<li>Champions - Kayne West, Gucci Mabne, Big Sean</li>
 				<li>Watch Out - 2 Chainz</li>
 				<li>It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz</li>
 				<li>Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo</li>
 			</span>
-			<span class="flex-1">
+			<span>
 				<li>We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa</li>
 				<li>Big Amount - 2 Chainz</li>
 				<li>Smartphone - 2 Chainz</li>
