Improving New Album section.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,85 +1,84 @@
-<!--
-Candidate: Francheska Guzman
-Deadline: January 31, 2018 at 10:00am
-Description: Pre-work for the Front End Developer position at Halo Media LLC.
--->
-
 <header>
-	<section id="menu" class="large-12 column">
-	  <div class="row">
-		<!-- Navigation -->
-		<nav class="clearfix large-4">
-		  <a class="active" href="#">News</a>
-		  <a href="#">Music</a>
-		  <a href="#">Video</a>
-		  <a href="#">Photos</a>
-		  <a href="#">Store</a>
-		</nav>
-		<div class="small-12 large-4">
-			<!-- 
-			TO DO: 
-			If I have time, add functionality to the hamburger button.
-			-->
-			<i class="fa fa-bars hamburger-menu"></i>
-			<!-- Artist name -->
-			<h1>2 Chainz</h1>
-		</div>
-		<div id="social" class="large-4">
-		  <!-- Social media -->
-		  <a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
-		  <a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
-		  <a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
-		  <a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
-		  <a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
-		  <a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
-		  <!-- Login -->
-		  <a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login</a>
-		</div>
-	  </div>
-	</section><!-- End of menu section -->
+  <section id="menu" class="large-12 column">
+	<div class="row">
+	  <!-- Navigation -->
+	  <nav class="clearfix large-4">
+		<a class="active" href="#">News</a>
+		<a href="#">Music</a>
+		<a href="#">Video</a>
+		<a href="#">Photos</a>
+		<a href="#">Store</a>
+	  </nav>
 
-	<section id="slideshow">
-	    <!-- Slideshow -->
-	    <img class="slideshow-image" alt="2 Chainz" src="../assets/img/image-8.jpg">
-		<!-- Title -->
-		<h2>Pretty Girls Like Trap Music</h2>
+	  <div class="small-12 large-4">
 		<!-- 
 		TO DO: 
-		On click, add a smooth scroll animation 
-		that scrolls the user to New Album section. 
+		If I have time, add functionality to the hamburger button.
 		-->
-		<input type="button" value="Listen Now">
-	</section><!-- End of slideshow section -->
+		<i class="fa fa-bars hamburger-menu"></i>
+		<!-- Artist name -->
+		<h1>2 Chainz</h1>
+	  </div>
+	  <div id="social" class="large-4">
+		<!-- Social media -->
+	    <a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
+		<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
+		<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
+		<a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
+		<a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
+		<a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
+	    <!-- Login -->
+		<a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login</a>
+	  </div>
+	</div>
+  </section><!-- End of menu section -->
+
+  <section id="slideshow">
+	<!-- Slideshow -->
+	<img class="slideshow-image" alt="2 Chainz" src="../assets/img/image-8.jpg">
+	<!-- Title -->
+	<h2>Pretty Girls Like Trap Music</h2>
+	<!-- 
+	TO DO: 
+	On click, add a smooth scroll animation 
+	that scrolls the user to New Album section. 
+	-->
+	<input type="button" value="Listen Now">
+  </section><!-- End of slideshow section -->
 </header>
 
-<section id="new-album">
+<section id="new-album" class="row">
+  <figure class="small-12 large-3 columns">
+	<!-- Image -->
+	<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-9.jpg">
+  </figure>
+  <div class="small-12 large-9 columns">
 	<!-- Title -->
 	<h3>New Album</h3>
 	<h4>Pretty Girls Like Trap Music</h4>
-	<!-- Image -->
-	<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-9.jpg">
 	<!-- Buttons -->
-	<div class="move-buttons">
+	<div class="move-buttons small-12 columns">
 		<input class="button" type="button" value="Spotify">
 		<input class="button" type="button" value="iTunes">
 		<input class="button" type="button" value="Google Play">
 		<input class="button" type="button" value="Amazon Music">
 	</div>
 		<!-- Tracks -->
-		<ol class="number">
-			<span>
-				<li>Good Drank - 2 Chainz, Gucci Mane, Quavo</li>
-				<li>Champions - Kayne West, Gucci Mabne, Big Sean</li>
-				<li>Watch Out - 2 Chainz</li>
-				<li>It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz</li>
-				<li>Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo</li>
-			</span>
-			<span>
-				<li>We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa</li>
-				<li>Big Amount - 2 Chainz</li>
-				<li>Smartphone - 2 Chainz</li>
-				<li>El Chapo Jr - 2 Chainz</li>
-				<li>I'm Diferent - 2 Chainz</li>
-			</span>
-		</ol>
+	<ol class="number small-12 columns">
+		<span class="small-12 large-6 columns">
+			<li>Good Drank - 2 Chainz, Gucci Mane, Quavo</li>
+			<li>Champions - Kayne West, Gucci Mabne, Big Sean</li>
+			<li>Watch Out - 2 Chainz</li>
+			<li>It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz</li>
+			<li>Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo</li>
+		</span>
+		<span class="small-12 large-6 columns">
+			<li>We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa</li>
+			<li>Big Amount - 2 Chainz</li>
+			<li>Smartphone - 2 Chainz</li>
+			<li>El Chapo Jr - 2 Chainz</li>
+			<li>I'm Diferent - 2 Chainz</li>
+		</span>
+	</ol>
+  </div>
 </section><!-- End of new album section -->
