--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
 <header>
-  <section id="menu" class="large-12 column">
+  <section id="menu" class="large-12 columns">
 	<div class="row">
 	  <!-- Navigation -->
 	  <nav class="clearfix large-4">
@@ -57,7 +57,7 @@
 	<h3>New Album</h3>
 	<h4>Pretty Girls Like Trap Music</h4>
 	<!-- Buttons -->
-	<div class="move-buttons small-12 columns">
+	<div class="small-12 columns">
 		<input class="button" type="button" value="Spotify">
 		<input class="button" type="button" value="iTunes">
 		<input class="button" type="button" value="Google Play">
@@ -82,3 +82,48 @@
 	</ol>
   </div>
 </section><!-- End of new album section -->
+
+<section id="news">
+	<article>
+		<figure>
+			<img alt="News 1" src="../assets/img/image-10.jpg">
+		</figure>
+		<figcaption>
+			<p>Watch 2 Chainz & Lil Wayne's New Video "Bounce"</p>
+			<a href="#">Read More</a>
+		</figcaption>
+	</article>
+	<article>
+		<figure>
+			<img alt="News 2" src="../assets/img/image-11.jpg">
+		</figure>
+		<figcaption>
+			<p>Get the dabbin this holiday season & purchase the...</p>
+		</figcaption>
+	</article>
+	<article>
+		<figure>
+			<img alt="News 3" src="../assets/img/image-12.jpg">
+		</figure>
+  	<figcaption>
+			<p>2 Chainz performing live at hempcon Nov. 7th</p>
+		</figcaption>
+	</article>
+	<article>
+		<figure>
+			<img alt="News 4" src="../assets/img/image-13.jpg">
+		</figure>
+		<figcaption>
+			<p>Watch out! 2 Chainz premieres new music on 1st annual bet...</p>
+		</figcaption>
+	</article>
+	<article>
+		<figure>
+			<img alt="News 5" src="../assets/img/image-14.jpg">
+		</figure>
+		<figcaption>
+			<p>GQ's most expensivest shit: 2 Chainz buys $14K Chair?</p>
+		</figcaption>
+	</article>
+	<input class="button" type="button" value="View More">
+</section><!-- End of news section -->
