--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -84,46 +84,54 @@
 </section><!-- End of new album section -->
 
 <section id="news">
-	<article>
-		<figure>
-			<img alt="News 1" src="../assets/img/image-10.jpg">
-		</figure>
-		<figcaption>
-			<p>Watch 2 Chainz & Lil Wayne's New Video "Bounce"</p>
-			<a href="#">Read More</a>
-		</figcaption>
-	</article>
-	<article>
-		<figure>
-			<img alt="News 2" src="../assets/img/image-11.jpg">
-		</figure>
-		<figcaption>
-			<p>Get the dabbin this holiday season & purchase the...</p>
-		</figcaption>
-	</article>
-	<article>
-		<figure>
-			<img alt="News 3" src="../assets/img/image-12.jpg">
-		</figure>
-  	<figcaption>
-			<p>2 Chainz performing live at hempcon Nov. 7th</p>
-		</figcaption>
-	</article>
-	<article>
-		<figure>
-			<img alt="News 4" src="../assets/img/image-13.jpg">
-		</figure>
-		<figcaption>
-			<p>Watch out! 2 Chainz premieres new music on 1st annual bet...</p>
-		</figcaption>
-	</article>
-	<article>
-		<figure>
-			<img alt="News 5" src="../assets/img/image-14.jpg">
-		</figure>
-		<figcaption>
-			<p>GQ's most expensivest shit: 2 Chainz buys $14K Chair?</p>
-		</figcaption>
-	</article>
-	<input class="button" type="button" value="View More">
+	<h3 class="row">News</h3>
+	<div class="row">
+		<article class="small-12 large-6 columns">
+			<figure>
+				<img class="bigger-image" alt="News 1" src="../assets/img/image-10.jpg">
+			</figure>
+			<figcaption>
+				<p>Watch 2 Chainz & Lil Wayne's New Video "Bounce"<br/>
+					<a href="#">Read More</a>
+				</p>
+			</figcaption>
+		</article>
+		<article class="small-6 large-3 columns">
+			<figure>
+				<img class="smaller-image" alt="News 2" src="../assets/img/image-11.jpg">
+			</figure>
+			<figcaption>
+				<p>Get the dabbin this holiday season & purchase the...</p>
+			</figcaption>
+		</article>
+		<article class="small-6 large-3 columns">
+			<figure>
+				<img class="smaller-image" alt="News 3" src="../assets/img/image-12.jpg">
+			</figure>
+			<figcaption>
+				<p>2 Chainz performing live at hempcon Nov. 7th</p>
+			</figcaption>
+		</article>
+		<article class="small-6 large-3 columns">
+			<figure>
+				<img class="smaller-image" alt="News 4" src="../assets/img/image-13.jpg">
+			</figure>
+			<figcaption>
+				<p>Watch out! 2 Chainz premieres new music on 1st annual bet...</p>
+			</figcaption>
+		</article>
+		<article class="small-6 large-3 columns">
+			<figure>
+				<img class="smaller-image" alt="News 5" src="../assets/img/image-14.jpg">
+			</figure>
+			<figcaption>
+				<p>GQ's most expensivest shit: 2 Chainz buys $14K Chair?</p>
+			</figcaption>
+		</article>
+	</div>
+	<div class="row">
+		<div class="small-12 columns">
+			<input class="button" type="button" value="View More">
+		</div>
+	</div>
 </section><!-- End of news section -->
