Updating News section.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,7 +21,7 @@
 	  </div>
 	  <div id="social" class="large-4">
 		<!-- Social media -->
-	    <a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
+	  <a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
 		<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
 		<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
 		<a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
@@ -83,9 +83,9 @@
   </div>
 </section><!-- End of new album section -->
 
-<section id="news">
-	<h3 class="row">News</h3>
-	<div class="row">
+<section id="news" class="row">
+	<h3 class="small-12 columns">News</h3>
+	<div class="small-12 columns row">
 		<article class="small-12 large-6 columns">
 			<figure>
 				<img class="bigger-image" alt="News 1" src="../assets/img/image-10.jpg">
@@ -129,9 +129,8 @@
 			</figcaption>
 		</article>
 	</div>
-	<div class="row">
-		<div class="small-12 columns">
-			<input class="button" type="button" value="View More">
-		</div>
+	<div class="small-12 columns">
+		<input class="button" type="button" value="View More">
+	</div>
 	</div>
 </section><!-- End of news section -->
