Adding tour dates.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -48,11 +48,11 @@
 </header>
 
 <section id="new-album" class="row">
-  <figure class="small-12 large-3 columns">
+  <figure class="small-12 large-4 columns">
 	<!-- Image -->
 	<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-9.jpg">
   </figure>
-  <div class="small-12 large-9 columns">
+  <div class="small-12 large-8 columns">
 	<!-- Title -->
 	<h3>New Album</h3>
 	<h4>Pretty Girls Like Trap Music</h4>
@@ -63,23 +63,21 @@
 		<input class="button" type="button" value="Google Play">
 		<input class="button" type="button" value="Amazon Music">
 	</div>
-		<!-- Tracks -->
-	<ol class="number small-12 columns">
-		<span class="small-12 large-6 columns">
-			<li>Good Drank - 2 Chainz, Gucci Mane, Quavo</li>
-			<li>Champions - Kayne West, Gucci Mabne, Big Sean</li>
-			<li>Watch Out - 2 Chainz</li>
-			<li>It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz</li>
-			<li>Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo</li>
-		</span>
-		<span class="small-12 large-6 columns">
-			<li>We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa</li>
-			<li>Big Amount - 2 Chainz</li>
-			<li>Smartphone - 2 Chainz</li>
-			<li>El Chapo Jr - 2 Chainz</li>
-			<li>I'm Diferent - 2 Chainz</li>
-		</span>
-	</ol>
+	<!-- Tracks -->
+	<span class="small-12 large-6 columns">
+		<li><input class="number" type="button" value="1"> Good Drank - 2 Chainz, Gucci Mane, Quavo </li>
+		<li><input class="number" type="button" value="2"> Champions - Kayne West, Gucci Mabne, Big Sean </li>
+		<li><input class="number" type="button" value="3"> Watch Out - 2 Chainz </li>
+		<li><input class="number" type="button" value="4"> It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz </li>
+		<li><input class="number" type="button" value="5"> Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo </li>
+	</span>
+	<span class="small-12 large-6 columns">
+		<li><input class="number" type="button" value="6"> We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa </li>
+		<li><input class="number" type="button" value="7"> Big Amount - 2 Chainz </li>
+		<li><input class="number" type="button" value="8"> Smartphone - 2 Chainz </li>
+		<li><input class="number" type="button" value="9"> El Chapo Jr - 2 Chainz </li>
+		<li><input class="number" type="button" value="10"> I'm Diferent - 2 Chainz </li>
+	</span>
   </div>
 </section><!-- End of new album section -->
 
@@ -134,3 +132,10 @@
 	</div>
 	</div>
 </section><!-- End of news section -->
+
+<section id="tour-dates" class="row">
+	<img class="bg-image" alt="Background" src="../assets/img/image-15.jpg">
+	<div class="tour-box">
+		<h3 class="small-12 columns">Tour Dates</h3>
+	</div>
+</section><!-- End of tour dates section -->
