--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -127,7 +127,7 @@
 			</figcaption>
 		</article>
 	</div>
-	<div class="small-12 columns">
+	<div class="view-more small-12 columns">
 		<input class="button" type="button" value="View More">
 	</div>
 	</div>
@@ -136,6 +136,58 @@
 <section id="tour-dates" class="row">
 	<img class="bg-image" alt="Background" src="../assets/img/image-15.jpg">
 	<div class="tour-box">
-		<h3 class="small-12 columns">Tour Dates</h3>
+		<div class="small-12 columns">
+	 	<h3 class="small-12 columns">Tour Dates</h3>
+			<li>
+				<span class="date">
+					<span class="yellow-date">Apr</span><br>14
+				</span>
+			  <span class="location">Cristler Center</span>
+				<span class="state">Ann Arbor, MI</span>
+				<span>
+					<input class="button" type="button" value="Tickets">
+				</span>
+			</li>
+			<li>
+				<span class="date">
+					<span class="yellow-date">Apr</span><br>19
+				</span>
+				<span class="location">Lost Lakes Ampitheatre</span>
+				<span class="state">Oklahoma City, OK</span>
+				<span>
+					<input class="button" type="button" value="Tickets">
+				</span>
+			</li>
+			<li>
+				<span class="date">
+					<span class="yellow-date">Apr</span><br>22
+				</span>
+				<span class="location">Pozo Saloon</span>
+				<span class="state">Santa Margarita, CA</span>
+				<span>
+					<input class="button" type="button" value="Tickets">
+				</span>
+			</li>
+			<li>
+				<span class="date">
+					<span class="yellow-date">Apr</span><br>23
+				</span>
+				<span class="location">Mullins Center</span>
+				<span class="state">Amherst, MA</span>
+				<span>
+					<input class="button" type="button" value="Tickets">
+				</span>
+			</li>
+			<li>
+				<span class="date">
+					<span class="yellow-date">Apr</span><br>28
+				</span>
+				<span class="location">Liacouras Center</span>
+				<span class="state">Philadelphia, PA</span>
+				<span>
+					<input class="button" type="button" value="Tickets">
+				</span>
+			</li>
+		</div>
 	</div>
 </section><!-- End of tour dates section -->
